// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: HundredWarBase
message HundredWarBase
{	
	
	
	repeated HundredWarDefine HundredWar = 1; // HundredWar

}

// Defined in table: HundredWar
message HundredWarDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 Type = 2; 
	
	
	optional string Name = 3; 
	
	
	optional string Icon = 4; 
	
	
	optional int32 MinBuyin = 5; 
	
	
	optional int32 MaxRole = 6; 
	
	
	repeated int32 Bet = 7; 
	
	
	optional int32 BankerGold = 8; 
	
	
	optional int32 SeatGold = 9; 
	
	
	optional float BettingRatio = 10; 
	
	
	optional float BankerRatio = 11; 
	
	
	optional float TaxRate = 12; 
	
	
	optional int32 Seat = 13; 
	
	
	optional int32 WaitTime = 14; 
	
	
	optional int32 BetTime = 15; 
	
	
	optional int32 ConfirmTime = 16; 
	
	
	optional int32 TimeOut = 17; 
	
	
	optional int32 Kick = 18; 
	
	
	optional int32 BankerRound = 19; 
	
	
	optional int32 BankerMinGold = 20; 
	
	
	optional string TitleImg = 21; 
	
	
	optional string PoolImg = 22; 
	
	
	optional string FontColor = 23; 

}

